--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "atob": "^2.1.2",
+    "lodash": "^4.17.11",
     "mocha": "^5.0.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.11"
   }
 }
